# 2dgamedev-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md
actors/: button.actor
config/: level_selector_window.json  main_menu_window.json  penguin_selector_window.json  s_level_selector_window.json  yes_no_window.json
include/: entity.h  font.h  gf2d_actor.h  gf2d_config.h  gf2d_element_actor.h  gf2d_element_button.h  gf2d_element_entry.h  gf2d_element_label.h  gf2d_element_list.h  gf2d_elements.h  gf2d_graphics.h  gf2d_mouse.h  gf2d_shape.h  gf2d_space.h  gf2d_sprite.h  gf2d_windows.h  level.h  obstacle.h  pickup.h  player.h  saves.h  shape.h  windows_common.h
levels/: a_level.json  b_level.json  c_level.json  e_level.json  exampleLevel.json  main_menu.json
saves/: lastgame.save
src/: Makefile  camera.c  entity.c  font.c  game.c  gf2d_actor.c  gf2d_body.c  gf2d_body.h  gf2d_collision.c  gf2d_config.c  gf2d_draw.c  gf2d_element_actor.c  gf2d_element_button.c  gf2d_element_entry.c  gf2d_element_label.c  gf2d_element_list.c  gf2d_elements.c  gf2d_font.c  gf2d_font.h  gf2d_graphics.c  gf2d_mouse.c  gf2d_shape.c  gf2d_space.c  gf2d_sprite.c  gf2d_windows.c  level.c  obstacle.c  pickup.c  player.c  saves.c  shape.c  windows_common.c
